--- a/infra/k8s-prod/ingress-srv.yaml
+++ b/infra/k8s-prod/ingress-srv.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
-kind: Ingress
+kind: Service
 metadata:
-  name: ingress-service
+  name: ingress-nginx-controller
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: 'true'
